@@ -1,4 +1,8 @@
 2016-06-01 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
+	* scripts/YieldsTable.py: use the logger class for better output
+	* scripts/YieldsTableTex.py: use the logger class for better output
+
+2016-06-01 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
 	* analysis/tutorial/MySimpleChannelConfig.py: set the default normfactor
 	to 1 and not 0.5 - or YieldsTable.py complains and confuses users! 
 
